Fix css bug so that highlights are in the right place

--- a/transcribe.html
+++ b/transcribe.html
@@ -54,7 +54,7 @@
                         </div>
                     </div>
 
-                    <!-- Deaths form -->
+                    <!-- Deaths form for dorset 1754-->
                     <div id="deaths-form">
                         <div class="controls controls-row">                
                             <input type="text" name="date" id="date" class="span2" placeholder="Date: dd/mm/yyy" autofocus/>
@@ -74,6 +74,19 @@
                             <input type="text" name="notes" id="notes" placeholder="Notes" class="span8 last"/>
                         </div>
                     </div>
+
+                    <!-- 1911 Census -->
+
+                    <!-- 1861 Census -->
+
+                    <!-- Fullborn Marriages -->
+
+                    <!-- Marriages + Banns -->
+
+                    <!-- Gaddesby Church Deaths -->
+
+                    <!-- Gaddesby Church Births -->
+                    
                 </div>
 
                 <div id="form-action-templates">
