Various usability tweaks

--- a/rotate.html
+++ b/rotate.html
@@ -22,7 +22,7 @@
         <div id="container">
             <h1>Rotater</h1>
             <p>
-                Use the left/right arrows to rotate the image. Hit <a id="rotate-save" class="btn btn-success btn-small" href="slice.html"><i class="icon-ok-sign icon-white"></i> Save</a> when you're done. <a id="delete" class="btn btn-danger btn-small" href="slice.html"><i class="icon-remove icon-white"></i> Delete</a> will clear all the data for this document.
+                Use the left/right arrows to rotate the image. Hit <a id="rotate-save" class="btn btn-primary btn-small" href="slice.html"><i class="icon-arrow-right icon-white"></i> Next</a> when you're done. <a id="delete" class="btn btn-danger btn-small" href="slice.html"><i class="icon-remove icon-white"></i> Delete</a> will clear all the data for this document.
             </p>
             </form>
             <div id="background-wrapper" class="clearfix">
