--- a/transcribe.html
+++ b/transcribe.html
@@ -23,6 +23,16 @@
             <h1>Transcriber</h1>
             <span id="counter" class="lead text-info"></span>
             <div id="background">
+                <div id="transcribe-controls">
+                    <div id="zoom-controls" class="clearfix">
+                        <div id="plus-control">
+                            <a href="#"><i class="icon-plus-sign"></i></a>
+                        </div>
+                        <div id="minus-control">
+                            <a href="#"><i class="icon-minus-sign"></i></a>
+                        </div>
+                    </div>
+                </div>
                 <div id="background-overlay-top"></div>
                 <!-- JS puts the image in here -->
                 <div id="slice-overlay"></div>
@@ -229,7 +239,7 @@
                     <div id="header-actions">
                         <a id="previous-slice" class="btn btn-link pull-left">Previous</a>
                         <button id="save-header-next" type="submit" class="btn btn-primary pull-left"><i class="icon-arrow-right icon-white"></i>Save and transcribe next segment</button>
-                        <a id="save-header-no-next" class="btn pull-right"><i class="icon-repeat"></i> Transcribe this segment</a>
+                        <a id="save-header-no-next" class="btn pull-right"><i class="icon-repeat"></i> This doesn't have a header</a>
                     </div>
 
                 </div>
@@ -240,7 +250,7 @@
 
                     <div id="header-button-wrapper">
                         <!-- JS hides this if we're showing a header -->
-                        <a id="is-header-button" class="btn">This is a header</a>
+                        <a id="is-header-button" class="btn">This is a new header</a>
                     </div>
 
                     <div id="form-fields"><!-- JS puts a form template in here --></div>
