Fix issues with slice handles

--- a/slice.html
+++ b/slice.html
@@ -28,16 +28,18 @@
                 <div id="background_padding">&nbsp;</div>
             </div>
             <div id="guillotine">
-                <div id="topgrip" class="ui-resizable-handle ui-resizable-n">
+                <div id="topgrip">
                     <div class="gripwrapper">
                         <i id="ngrip" class="icon-chevron-up"></i>
                     </div>
+                    <div id="actual-grip-n" class="ui-resizable-handle ui-resizable-n"></div>
                 </div>
                 <div id="guillotine-lines"></div>
                 <div id="bottomgrip" class="ui-resizable-handle ui-resizable-s">
                     <div class="gripwrapper">
                         <i id="sgrip" class="icon-chevron-down"></i>
                     </div>
+                    <div id="actual-grip-s" class="ui-resizable-handle ui-resizable-s"></div>
                 </div>
             </div>
         </div>
